2.2.0/_sources/gallery/images_contours_and_fields/multi_image.rst.txt


.. _sphx_glr_gallery_images_contours_and_fields_multi_image.py:


===========
Multi Image
===========

Make a set of images with a single colormap, norm, and colorbar.




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_multi_image_001.png
    :align: center





.. code-block:: python


    from matplotlib import colors
    import matplotlib.pyplot as plt
    import numpy as np

    np.random.seed(19680801)
    Nr = 3
    Nc = 2
    cmap = "cool"

    fig, axs = plt.subplots(Nr, Nc)
    fig.suptitle('Multiple images')

    images = []
    for i in range(Nr):
        for j in range(Nc):
            # Generate data with a range that varies from one plot to the next.
            data = ((1 + i + j) / 10) * np.random.rand(10, 20) * 1e-6
            images.append(axs[i, j].imshow(data, cmap=cmap))
            axs[i, j].label_outer()

    # Find the min and max of all colors for use in setting the color scale.
    vmin = min(image.get_array().min() for image in images)
    vmax = max(image.get_array().max() for image in images)
    norm = colors.Normalize(vmin=vmin, vmax=vmax)
    for im in images:
        im.set_norm(norm)

    fig.colorbar(images[0], ax=axs, orientation='horizontal', fraction=.1)


    # Make images respond to changes in the norm of other images (e.g. via the
    # "edit axis, curves and images parameters" GUI on Qt), but be careful not to
    # recurse infinitely!
    def update(changed_image):
        for im in images:
            if (changed_image.get_cmap() != im.get_cmap()
                    or changed_image.get_clim() != im.get_clim()):
                im.set_cmap(changed_image.get_cmap())
                im.set_clim(changed_image.get_clim())


    for im in images:
        im.callbacksSM.connect('changed', update)

    plt.show()



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: multi_image.py <multi_image.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: multi_image.ipynb <multi_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
